--- a/src/app/modules/tourists/components/bookings/bookings.component.html
+++ b/src/app/modules/tourists/components/bookings/bookings.component.html
@@ -107,16 +107,16 @@
 
 <!-- <mdb-card> -->
     <!--Card content-->
-    <br>
-    <br>
-    <br>
-   <mdb-card>
+
+    <!--  -->
+    
+   <mdb-card class="mb-3" *ngFor="let booking of bookingsList">
       <mdb-card>
           <mdb-card-body>
               <div class="row">
                   <div class="col-md-10">
                    <mdb-card-title>
-                <h4><mdb-icon fas icon="suitcase" style="color: rgba(233, 30, 99, 0.7);" ></mdb-icon> &nbsp; Rishikesh with Arjun Kumar</h4>
+                <h4><mdb-icon fas icon="suitcase" style="color: rgba(233, 30, 99, 0.7);" ></mdb-icon> &nbsp; {{booking.guideId?.city}}, India with {{booking.guideId?.name}}</h4>
               </mdb-card-title> </div>
               <div class="col-md-2">
                 <button mdbBtn type="button" size="sm" color="pink" mdbWavesEffect>Chat with Guide</button>
@@ -126,14 +126,13 @@
               <!--Text-->
               <mdb-card-text> 
                   Approved booking by the guide under Voils <a href="">terms and condition</a> contact your 
-                  guide for any booking related quary .
-                  <p><a style="color: rgba(233, 30, 99, 0.7);" (click)="test1.toggle()">View more</a></p>
+                  guide for any booking related quary.
+
+                  <p>{{booking.places.toString()}}</p>
+                  <p class="mb-0"><a style="color: rgba(233, 30, 99, 0.7);" (click)="test1.toggle()">View more</a></p>
                   
               </mdb-card-text> 
-              
-             
-              
-              
+          
            
   </mdb-card-body>
       </mdb-card>
@@ -142,99 +141,34 @@
     <mdb-card-body >
         <!--Text-->
         <mdb-card-text> 
-            <div class="row">
-                <div class="col-md-4">
-                   <h5>From</h5> 03 Aug'2020
-                </div>
-                <div class="col-md-4">
-                  <h5>To</h5> 08 Aug'2020
-              </div>
-              <div class="col-md-4">
-                   <h5>Deal</h5> Pre-Planed deal
-              </div>
-                
-            </div>
-            <br>
-            <div class="row">
-              <div class="col-md-4">
-                 <h5>Guide</h5> Arjun Kumar Sing
-              </div>
-              <div class="col-md-4">
-                <h5>Price</h5> 500/person
-            </div>
-            <div class="col-md-4">
-                 <h5>People</h5> <i class="fas fa-user-friends"></i> Anika + 4
-            </div>
-              
-          </div>
-          
-        </mdb-card-text> 
-      </mdb-card-body>
-    </mdb-card>
-  </div>
-    </mdb-card>
-  <br>
-  <br>
-  <mdb-card>
-    <mdb-card>
-        <mdb-card-body>
-            <div class="row">
-                <div class="col-md-10">
-                 <mdb-card-title>
-              <h4><mdb-icon fas icon="suitcase" style="color: rgba(233, 30, 99, 0.7);" ></mdb-icon> &nbsp; Rishikesh with Arjun Kumar</h4>
-            </mdb-card-title> </div>
-            <div class="col-md-2">
-              <button mdbBtn type="button" size="sm" color="pink" mdbWavesEffect>Chat with Guide</button>
-            </div>
-        
-      </div>
-            <!--Text-->
-            <mdb-card-text> 
-                Approved booking by the guide under Voils <a href="">terms and condition</a> contact your 
-                guide for any booking related quary .
-                <p><a style="color: rgba(233, 30, 99, 0.7);" (click)="test2.toggle()">View more</a></p>
-                
-            </mdb-card-text> 
-            
-           
-            
-            
-         
-</mdb-card-body>
-    </mdb-card>
-<div mdbCollapse [isCollapsed]="true" #test2="bs-collapse">
-    <mdb-card>
-  <mdb-card-body >
-      <!--Text-->
-      <mdb-card-text> 
           <div class="row">
               <div class="col-md-4">
-                 <h5>From</h5> 03 Aug'2020
+                 <h5>From</h5> {{booking.startDate | date: 'dd-MM-yy'}}
               </div>
               <div class="col-md-4">
-                <h5>To</h5> 08 Aug'2020
+                <h5>To</h5> {{booking.endDate | date: 'dd-MM-yy'}}
             </div>
             <div class="col-md-4">
-                 <h5>Deal</h5> Pre-Planed deal
+                 <h5>Tour Type</h5> {{booking.tourType}}
             </div>
               
           </div>
           <br>
           <div class="row">
             <div class="col-md-4">
-               <h5>Guide</h5> Arjun Kumar Sing
+               <h5>Guide</h5> {{booking.guideId?.name}}
             </div>
             <div class="col-md-4">
-              <h5>Price</h5> 500/person
+              <h5>Price</h5>  INR {{booking.price}}/person
           </div>
           <div class="col-md-4">
-               <h5>People</h5> <i class="fas fa-user-friends"></i> Anika + 4
+               <h5>People</h5> <i class="fas fa-user-friends"></i> {{booking.noOfPeople}}
           </div>
             
         </div>
         
-      </mdb-card-text> 
-    </mdb-card-body>
-  </mdb-card>
-</div>
-  </mdb-card>
+      </mdb-card-text>   
+      </mdb-card-body>
+    </mdb-card>
+  </div>
+    </mdb-card>
