--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -13,16 +13,9 @@
 
         <!-- Links -->
         <ul class="navbar-nav ml-auto">
-            <li class="nav-item active" >
-                <a class="nav-link waves-light" mdbWavesEffect>
-                    <!-- <mdb-icon fas icon="envelope"></mdb-icon> -->
-                    Logout
-                    <!-- <span class="sr-only">(current)</span> -->
-                </a>
-            </li>
-
+            
             <li class="nav-item" >
-                <a class="nav-link waves-light" data-toggle="#" data-target="#basicExample" mdbWavesEffect>
+                <a [routerLink]="['/tourists/touristshome/favourites']" routerLinkActive="active" class="nav-link waves-light" mdbWavesEffect>
                     <!-- <mdb-icon fas icon="cog"></mdb-icon>  -->
                     <mdb-icon fas icon="heart"></mdb-icon>
                 </a>
@@ -34,15 +27,9 @@
                 </a>
             </li>
             <li class="nav-item" >
-                <a class="nav-link waves-light" data-toggle="#" data-target="#basicExample" mdbWavesEffect>
+                <a class="nav-link waves-light" [routerLink]="['/tourists/touristshome/bookings']" routerLinkActive="active" mdbWavesEffect>
                     <!-- <mdb-icon fas icon="cog"></mdb-icon>  -->
                     <mdb-icon fas icon="calendar-alt"></mdb-icon>Bookings</a>
-            </li>
-
-            <li class="nav-item" >
-                <a class="nav-link waves-light" data-toggle="modal" data-target="#basicExample" (click)="frame.show()" mdbWavesEffect>
-                    <!-- <mdb-icon fas icon="cog"></mdb-icon>  -->
-                    LogIn</a>
             </li>
             <li class="nav-item" >
               <a class="nav-link waves-light"  [routerLink]="['/login']" mdbWavesEffect>
@@ -77,9 +64,9 @@
                     <img src="https://mdbootstrap.com/img/Photos/Avatars/avatar-2.jpg" alt="" class="img-fluid rounded-circle z-depth-0" style="height:32px; width:32px;">
                 </a>
                 <div *dropdownMenu class="dropdown-menu dropdown-menu-right dropdown dropdown-primary" role="menu">
-                    <a class="dropdown-item waves-light" mdbWavesEffect [routerLink]="['/']">Edit Profile</a>
-                    <a class="dropdown-item waves-light" mdbWavesEffect [routerLink]="['/']">Your Requests</a>
-                    <a class="dropdown-item waves-light" mdbWavesEffect [routerLink]="['/']">Logout</a>
+                    <a class="dropdown-item waves-light" mdbWavesEffect [routerLink]="['/tourists/touristshome/editProfile']" routerLinkActive="active">Edit Profile</a>
+                    <a class="dropdown-item waves-light" mdbWavesEffect [routerLink]="['/tourists/touristshome/changePassword']" routerLinkActive="active">Change Password</a>
+                    <a class="dropdown-item waves-light" mdbWavesEffect (click)="logout()">Logout</a>
 
                 </div>
             </li>
@@ -91,109 +78,3 @@
 
 </mdb-navbar>
 <!--/.Navbar-->
-
-
-
-
-<!--Modal: Login / Register Form-->
-<div class="modal fade " mdbModal #frame="mdbModal" id="modalLRForm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-    <div class="modal-dialog cascading-modal" role="document">
-        <!--Content-->
-        <div class="modal-content" style="background-image: url('https://mdbootstrap.com/img/Photos/Others/pricing-table%20(7).jpg');">
-
-            <!--Modal cascading tabs-->
-            <div class="modal-c-tabs">
-
-                <!-- Nav tabs -->
-                <ul class="nav nav-tabs md-tabs tabs-2 light-blue darken-3" role="tablist">
-                    <li class="nav-item">
-                        <a class="nav-link active" data-toggle="tab" href="#panel7" role="tab"><i class="fas fa-user mr-1"></i>
-              Login</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" data-toggle="tab" href="#panel8" role="tab"><i class="fas fa-user-plus mr-1"></i>
-              Register</a>
-                    </li>
-                </ul>
-
-                <!-- Tab panels -->
-                <div class="tab-content">
-                    <!--Panel 7-->
-                    <div class="tab-pane fade in show active" id="panel7" role="tabpanel">
-
-                        <!--Body-->
-                        <form [formGroup]="loginForm">
-                            <div class="modal-body mb-1">
-                                <div class="md-form form-sm mb-5">
-                                    <i class="fas fa-envelope prefix"></i>
-                                    <input type="email" id="modalLRInput10" formControlName="email" class="form-control form-control-sm validate">
-                                    <label data-error="wrong" data-success="right" for="modalLRInput10">Your email</label>
-                                </div>
-
-                                <div class="md-form form-sm mb-4">
-                                    <i class="fas fa-lock prefix"></i>
-                                    <input type="password" id="modalLRInput11" formControlName="password" class="form-control form-control-sm validate">
-                                    <label data-error="wrong" data-success="right" for="modalLRInput11">Your password</label>
-                                </div>
-                                <div class="text-center mt-2">
-                                    <button type="submit" (click)="submitLogin('tourists')" class="btn btn-info">Log in <i class="fas fa-sign-in ml-1"></i></button>
-                                </div>
-                            </div>
-                        </form>
-                        <!--Footer-->
-                        <div class="modal-footer">
-                            <div class="options text-center text-md-right mt-1">
-                                <p>Not a member? <a href="#" class="blue-text">Sign Up</a></p>
-                                <p>Forgot <a href="#" class="blue-text">Password?</a></p>
-                            </div>
-                            <button type="button" class="btn btn-outline-info waves-effect ml-auto" (click)="frame.hide()">Close</button>
-                        </div>
-
-                    </div>
-                    <!--/.Panel 7-->
-
-                    <!--Panel 8-->
-                    <div class="tab-pane fade" id="panel8" role="tabpanel">
-
-                        <!--Body-->
-                        <div class="modal-body">
-                            <div class="md-form form-sm mb-5">
-                                <i class="fas fa-envelope prefix"></i>
-                                <input type="email" id="modalLRInput12" class="form-control form-control-sm validate">
-                                <label data-error="wrong" data-success="right" for="modalLRInput12">Your email</label>
-                            </div>
-
-                            <div class="md-form form-sm mb-5">
-                                <i class="fas fa-lock prefix"></i>
-                                <input type="password" id="modalLRInput13" class="form-control form-control-sm validate">
-                                <label data-error="wrong" data-success="right" for="modalLRInput13">Your password</label>
-                            </div>
-
-                            <div class="md-form form-sm mb-4">
-                                <i class="fas fa-lock prefix"></i>
-                                <input type="password" id="modalLRInput14" class="form-control form-control-sm validate">
-                                <label data-error="wrong" data-success="right" for="modalLRInput14">Repeat password</label>
-                            </div>
-
-                            <div class="text-center form-sm mt-2">
-                                <button class="btn btn-info">Sign up <i class="fas fa-sign-in ml-1"></i></button>
-                            </div>
-
-                        </div>
-                        <!--Footer-->
-                        <div class="modal-footer">
-                            <div class="options text-right">
-                                <p class="pt-1">Already have an account? <a href="#" class="blue-text">Log In</a></p>
-                            </div>
-                            <button type="button" class="btn btn-outline-info waves-effect ml-auto" (click)="frame.hide()" mdbWavesEffect>Close</button>
-                        </div>
-                    </div>
-                    <!--/.Panel 8-->
-                </div>
-
-            </div>
-        </div>
-        <!--/.Content-->
-    </div>
-</div>
-<!--Modal: Login / Register Form-->
