--- a/src/app/modules/tourists/components/requests/requests.component.html
+++ b/src/app/modules/tourists/components/requests/requests.component.html
@@ -63,19 +63,17 @@
         </mdb-card-footer>
     </mdb-card>
 </div> -->
-<br>
-    <br>
-    <br>
-   <mdb-card>
+
+   <mdb-card class="mb-3" *ngFor="let booking of requestList">
       <mdb-card>
           <mdb-card-body>
               <div class="row">
                   <div class="col-md-10">
                    <mdb-card-title>
-                <h4><mdb-icon fas icon="lock" style="color: rgba(0, 188, 212, 0.7)" ></mdb-icon> &nbsp; Jhumritaliya with Arjun Kumar</h4>
+                <h4><mdb-icon fas icon="lock" style="color: rgba(0, 188, 212, 0.7)" ></mdb-icon> &nbsp; {{booking.guideId?.city}}, India with {{booking.guideId?.name}}</h4>
               </mdb-card-title> </div>
               <div class="col-md-2">
-                <button mdbBtn type="button" size="sm" color="cyan" mdbWavesEffect>Cancle Deal</button>
+                <button mdbBtn (click)="cancelRequest(booking)" type="button" size="sm" color="cyan" mdbWavesEffect>Cancel Request</button>
               </div>
           
         </div>
@@ -83,7 +81,9 @@
               <mdb-card-text> 
                   Approved booking by the guide under Voils <a href="">terms and condition</a> contact your 
                   guide for any booking related quary .
-                  <p><a style="color: rgba(0, 188, 212, 0.7)" (click)="test1.toggle()">View more</a></p>
+
+                  <p>{{booking.places.toString()}}</p>
+                  <p class="mb-0"><a style="color: rgba(0, 188, 212, 0.7)" (click)="test1.toggle()">View more</a></p>
                   
               </mdb-card-text> 
               
@@ -98,99 +98,35 @@
     <mdb-card-body >
         <!--Text-->
         <mdb-card-text> 
-            <div class="row">
-                <div class="col-md-4">
-                   <h5>From</h5> 03 Aug'2020
-                </div>
-                <div class="col-md-4">
-                  <h5>To</h5> 08 Aug'2020
-              </div>
-              <div class="col-md-4">
-                   <h5>Deal</h5> Pre-Planed deal
-              </div>
-                
-            </div>
-            <br>
-            <div class="row">
-              <div class="col-md-4">
-                 <h5>Guide</h5> Arjun Kumar Sing
-              </div>
-              <div class="col-md-4">
-                <h5>Price</h5> 500/person
-            </div>
-            <div class="col-md-4">
-                 <h5>People</h5> <i class="fas fa-user-friends"></i> Anika + 4
-            </div>
-              
-          </div>
-          
-        </mdb-card-text> 
-      </mdb-card-body>
-    </mdb-card>
-  </div>
-    </mdb-card>
-  <br>
-  <br>
-  <mdb-card>
-    <mdb-card>
-        <mdb-card-body>
-            <div class="row">
-                <div class="col-md-10">
-                 <mdb-card-title>
-              <h4><mdb-icon fas icon="lock" style="color: rgba(0, 188, 212, 0.7)" ></mdb-icon> &nbsp; Jaipur with Arjun Kumar</h4>
-            </mdb-card-title> </div>
-            <div class="col-md-2">
-              <button mdbBtn type="button" size="sm" color="cyan" mdbWavesEffect>Cancle Deal</button>
-            </div>
-        
-      </div>
-            <!--Text-->
-            <mdb-card-text> 
-                Approved booking by the guide under Voils <a href="">terms and condition</a> contact your 
-                guide for any booking related quary .
-                <p><a style="color: rgba(0, 188, 212, 0.7)" (click)="test2.toggle()">View more</a></p>
-                
-            </mdb-card-text> 
-            
-           
-            
-            
-         
-</mdb-card-body>
-    </mdb-card>
-<div mdbCollapse [isCollapsed]="true" #test2="bs-collapse">
-    <mdb-card>
-  <mdb-card-body >
-      <!--Text-->
-      <mdb-card-text> 
           <div class="row">
               <div class="col-md-4">
-                 <h5>From</h5> 03 Aug'2020
+                 <h5>From</h5> {{booking.startDate | date: 'dd-MM-yy'}}
               </div>
               <div class="col-md-4">
-                <h5>To</h5> 08 Aug'2020
+                <h5>To</h5> {{booking.endDate | date: 'dd-MM-yy'}}
             </div>
             <div class="col-md-4">
-                 <h5>Deal</h5> Pre-Planed deal
+                 <h5>Tour Type</h5> {{booking.tourType}}
             </div>
               
           </div>
           <br>
           <div class="row">
             <div class="col-md-4">
-               <h5>Guide</h5> Arjun Kumar Sing
+               <h5>Guide</h5> {{booking.guideId?.name}}
             </div>
             <div class="col-md-4">
-              <h5>Price</h5> 500/person
+              <h5>Price</h5>  INR {{booking.price}}/person
           </div>
           <div class="col-md-4">
-               <h5>People</h5> <i class="fas fa-user-friends"></i> Anika + 4
+               <h5>People</h5> <i class="fas fa-user-friends"></i> {{booking.noOfPeople}}
           </div>
             
         </div>
         
-      </mdb-card-text> 
-    </mdb-card-body>
-  </mdb-card>
-</div>
-  </mdb-card>
+      </mdb-card-text>  
+      </mdb-card-body>
+    </mdb-card>
+  </div>
+    </mdb-card>
+  
