--- a/src/app/modules/tourists/pages/tourists-home/tourists-home.component.html
+++ b/src/app/modules/tourists/pages/tourists-home/tourists-home.component.html
@@ -7,15 +7,15 @@
             <li class="nav-item">
                 <a class="nav-link " id="bookings-tab" data-toggle="tab" [routerLink]="['bookings']" routerLinkActive="active" role="tab" aria-controls="bookings" aria-selected="true">Your Bookings</a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
                 <a class="nav-link " id="requests-tab" data-toggle="tab" [routerLink]="['requests']" routerLinkActive="active" role="tab" aria-controls="requests" aria-selected="true">Your Requests</a>
-            </li>
+            </li> -->
             <li class="nav-item">
                 <a class="nav-link " id="messages-tab" data-toggle="tab" [routerLink]="['messages']" routerLinkActive="active" role="tab" aria-controls="messages" aria-selected="true">Messages</a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
                 <a class="nav-link " id="histories-tab" data-toggle="tab" [routerLink]="['histories']" routerLinkActive="active" role="tab" aria-controls="histories" aria-selected="true">Previous Trips</a>
-            </li>
+            </li> -->
             <li class="nav-item">
                 <a class="nav-link" id="favourites-tab" data-toggle="tab" [routerLink]="['favourites']" routerLinkActive="active" role="tab" aria-controls="favourites" aria-selected="false">Favourites</a>
             </li>
