--- a/src/app/modules/guide/components/question-details/question-details.component.html
+++ b/src/app/modules/guide/components/question-details/question-details.component.html
@@ -4,31 +4,42 @@
     <div class="col-md-7">
       <h2 class="card-title center" >Sign Up</h2>
        <div class="card-text"> 
-        <div class="md-form">
-          <mdb-icon fas icon="file-alt" class="prefix"></mdb-icon>
-          <input mdbInput type="text" id="form3" class="form-control">
-          <label for="form3">Write a Bio.</label>
+        <div class="row card-body pb-0">
+          <div class="col-md-12">
+            <div class="form-group">
+          
+          <label for="form58">Are you a verified or Experienced guide ?</label>
+          <textarea class="form-control"></textarea>
+        </div>
+          </div>
         </div>
         <br>
-        <div class="md-form">
-          <input mdbInput placeholder="Write about it" type="text" id="form58" class="form-control">
+        <div class="row card-body pb-0">
+          <div class="col-md-12">
+            <div class="form-group">
+          
           <label for="form58">Are you a verified or Experienced guide ?</label>
+          <textarea class="form-control"></textarea>
+        </div>
+          </div>
         </div>
         <br>
-        <div class="md-form">
-          <input mdbInput placeholder="Write about it" type="text" id="form58" class="form-control">
+        <div class="row card-body pb-0">
+          <div class="col-md-12">
+            <div class="form-group">
+          
           <label for="form58">Are you a verified or Experienced guide ?</label>
+          <textarea class="form-control"></textarea>
         </div>
-        <br>
-        <div class="md-form">
-          <input mdbInput placeholder="Write about it" type="text" id="form58" class="form-control">
-          <label for="form58">Are you a verified or Experienced guide ?</label>
+          </div>
         </div>
-        <br>
-        <div class="md-form">
-          <input mdbInput placeholder="Write about it" type="text" id="form58" class="form-control">
-          <label for="form58">Are you a verified or Experienced guide ?</label>
+        <div class="row card-body mx-0">
+          <div class="col-md-12">
+            <button class="btn btn-success" type="button" previousStep>Previous</button>
+            <button class="btn btn-success" type="button" nextStep>Next</button>
+          </div>
         </div>
+        
         
       
       
@@ -37,7 +48,8 @@
       
       </div>
       </div>
-    
+
+    <!--  -->
     <div class="col-md-5">
       <div class="svg1 align-self-center d-flex justify-content-center">
         
@@ -48,8 +60,8 @@
   </div>
   </div>
  
-  <div class="flex-row">
+  <!-- <div class="flex-row">
     <a class="card-link" previousStep>Previous</a>
-    <a class="card-link" >Submit</a>
-  </div>
+    <a class="card-link"  nextStep>Next</a>
+  </div> -->
 </div>
