--- a/src/app/modules/guide/components/personal-details/personal-details.component.html
+++ b/src/app/modules/guide/components/personal-details/personal-details.component.html
@@ -3,14 +3,15 @@
   <div class="row">
     <div class="col-md-7">
       <h2 class="card-title center" >Sign Up</h2>
-       <div class="card-text"> 
-         <div class="row card-body">
+       <div class="card-text">
+         <form [formGroup]="personalDetails"> 
+         <div class="row card-body mx-0">
            <div class="col-md-3">
             <div class="form-group">
               <mdb-icon fas icon="user-circle" class="prefix"></mdb-icon>
               <label for="form1"> Gender</label>
               <!-- <input type="text" id="form1" class="form-control"> -->
-              <select id="form1" class="form-control">
+              <select id="form1" class="form-control" formControlName="gender">
                 <option value='' disabled>Select</option>
                 <option value='Mr'>Mr</option>
                 <option value='Mrs'>Mrs</option>
@@ -22,43 +23,43 @@
              <div class="form-group">
           <mdb-icon fas icon="user-circle" class="prefix"></mdb-icon>
           <label for="form2"> Full Name</label>
-          <input type="text" id="form2" class="form-control">
+          <input type="text" id="form2" class="form-control" formControlName="name">
           
         </div>
            </div>
          </div>
          <!--  -->
 
-         <div class="row card-body pt-0">
+         <div class="row card-body pt-0 mx-0">
            <div class="col-md-12">
             <div class="form-group">
               <mdb-icon fas icon="envelope" class="prefix"></mdb-icon>
               <label for="form5">Email</label>
-              <input type="email" id="form5" class="form-control">
+              <input type="email" id="form5" formControlName="email" class="form-control">
               
             </div>
            </div>
          </div>
          <!--  -->
 
-         <div class="row card-body pt-0">
+         <div class="row card-body pt-0 mx-0">
            <div class="col-md-12">
             <div class="form-group">
               <mdb-icon fas icon="phone-alt" class="prefix"></mdb-icon>
               <label for="form6">Phone number</label>
-              <input type="text" id="form6" class="form-control">
+              <input type="text" id="form6" formControlName="phoneNumber" class="form-control">
               
             </div>
            </div>
          </div>
          <!--  -->
 
-         <div class="row card-body pt-0">
+         <div class="row card-body pt-0 mx-0">
           <div class="col-md-6">
             <div class="form-group">
               <mdb-icon fas icon="key" class="prefix"></mdb-icon>
               <label for="form3">Password</label>
-              <input type="password" id="form3" class="form-control">
+              <input type="password" id="form3" formControlName="password" class="form-control">
               
             </div>
            </div>
@@ -67,19 +68,19 @@
             <div class="form-group">
               <mdb-icon fas icon="key" class="prefix"></mdb-icon>
               <label for="form4">Confirm Password</label>
-              <input type="password" id="form4" class="form-control">
+              <input type="password" formControlName="confirmPassword" id="form4" class="form-control">
               
             </div>
            </div>
           </div>
           <!--  -->
 
-         <div class="row card-body pt-0">
+         <div class="row card-body pt-0 mx-0">
           <div class="col-md-5">
             <div class="form-group">
               <mdb-icon far icon="calendar-alt" class="prefix"></mdb-icon>
               <label for="form3">Date of Birth</label>
-              <input type="date" id="form3" class="form-control">
+              <input type="date" id="form3" formControlName="dob" class="form-control">
              
             </div>
            </div>
@@ -88,59 +89,64 @@
             <div class="form-group">
          <mdb-icon far icon="address-card" class="prefix"></mdb-icon>
          <label for="form4">Aadhar card Number</label>
-         <input type="number" id="form4" class="form-control">
+         <input type="number" id="form4"formControlName="aadhaarNumber" class="form-control">
          
        </div></div>
           </div>
           
           <!--  -->
-          <div class="row card-body">
-            <div class="col-md-4">
+          <div class="row card-body pt-0 mx-0">
+            <div class="col-md-6">
               <div class="form-group">
                 <label for="form7" class="">State</label>
                 <!-- <input type="select" id="form7" class="form-control"> -->
-                <select class="form-control">
-                  <option value="" disabled></option>
+                <select class="form-control" formControlName="state" id="form0" class="browser-default custom-select" #state
+                  (change)="getAllCity(state.value)">
+                  <option value="" disabled>Select State</option>
+                  <option *ngFor="let item of stateList" [value]="item.id"> {{ item?.name }}</option>
                 </select>
+
               </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-6">
               <div class="form-group">
                 <label for="form8" class="">City</label>
                 <!-- <input type="select" id="form8" class="form-control"> -->
-                <select class="form-control">
-                  <option value="" disabled></option>
+                <select class="form-control" formControlName="city" class="browser-default custom-select" id="form1">
+                  <option value="" disabled>Select City</option>
+                  <option *ngFor="let item of cityList" [value]="item.name"> {{ item?.name }}</option>
                 </select>
               </div>
             </div>
-            <div class="col-md-4">
+            <!-- <div class="col-md-4">
               <div class="form-group">
                 <label for="form9" class="">Pincode</label>
-                <!-- <input type="select" id="form9" class="form-control"> -->
-                <select class="form-control">
-                  <option value="" disabled></option>
-                </select>
+                <input type="select" id="form9" class="form-control">
               </div>
-            </div>
+            </div> -->
           </div>
 
           <!--  -->
-          <div class="form-group">
-            <mdb-icon far icon="address-book" class="prefix"></mdb-icon>
-            <input type="text" id="form10" class="form-control">
-            <label for="form10">Address</label>
+          <div class="row card-body pt-0 mx-0">
+            <div class="col-md-12">
+              <div class="form-group">
+                <mdb-icon far icon="address-book" class="prefix"></mdb-icon>
+                <label for="form10">Address</label>
+                <input type="text" formControlName="address" id="form10" class="form-control">
+                
+              </div>
+            </div>
           </div>
-        
-        
-        
-        
+          <!--  -->
+          <div class="row card-body mx-0">
+            <div class="col-md-12">
+              <button class="btn btn-success" (click)="submitPersonalDetails()" type="button" >Next</button>
+            </div>
+          </div>
+        </form>
         </div>
-         
-
-
-
        </div>
-    
+    <!--  -->
     <div class="col-md-5">
       <div class="svg align-self-center d-flex justify-content-center">
         <svg id="f7ee2044-fccd-4254-8d0a-396acfe54447" data-name="Layer 1" 
@@ -154,8 +160,8 @@
   </div>
   </div>
  
-  <div class="flex-row">
+  <!-- <div class="flex-row">
     <a class="card-link" goToStep="2">Last</a>
     <a class="card-link" nextStep>Next</a>
-  </div>
+  </div> -->
 </div>
