--- a/src/app/modules/tourists/pages/register/register.component.scss
+++ b/src/app/modules/tourists/pages/register/register.component.scss
@@ -3,7 +3,7 @@
     -moz-box-shadow: 11px 12px 26px -2px rgba(217, 217, 217, 1);
     box-shadow: 11px 12px 26px -2px rgba(217, 217, 217, 1);
     width: 950px;
-    height: 550px;
+    min-height: 550px;
     border-radius: 10px;
     border: none;
 }
@@ -17,7 +17,7 @@ html {
     /* The image used */
     background-image: url("https://images.unsplash.com/photo-1573398643956-2b9e6ade3456?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=967&q=80");
     /* Full height */
-    height: 100%;
+    // height: 100%;
     /* Center and scale the image nicely */
     background-position: center;
     background-repeat: no-repeat;
