--- a/src/app/modules/guide/components/bussiness-details/bussiness-details.component.html
+++ b/src/app/modules/guide/components/bussiness-details/bussiness-details.component.html
@@ -180,7 +180,7 @@
     <div class="col-md-2">
       <div class="form-group">
         <label>Start Year</label>
-        <input type="text" class="form-control" formControlName="startYear">
+        <input type="number" class="form-control" formControlName="startYear">
       </div>
     </div>
     <div class="col-md-2">
