--- a/src/app/modules/guide/components/personal-details/personal-details.component.html
+++ b/src/app/modules/guide/components/personal-details/personal-details.component.html
@@ -47,7 +47,7 @@
             <div class="form-group">
               <mdb-icon fas icon="phone-alt" class="prefix"></mdb-icon>
               <label for="form6">Phone number</label>
-              <input type="text" id="form6" formControlName="phoneNumber" class="form-control">
+              <input type="number" id="form6" formControlName="phoneNumber" class="form-control">
               
             </div>
            </div>
