--- a/src/app/modules/tourists/components/dashboard/dashboard.component.html
+++ b/src/app/modules/tourists/components/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-md-12">
     <app-filter-form></app-filter-form>
-    <button type="button" class="btn btn-success" (click)="navigateOnResultPage()">Search</button>
+    <!-- <button type="button" class="btn btn-success" (click)="navigateOnResultPage()">Search</button> -->
   </div>
 </div>
 <div class="row">
